# sims_3000

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
poc/poc-5-transport-graph/: CMakeLists.txt  FlowSimulation.h  NetworkGraph.h  PathwayGrid.h  ProximityCache.h  main.cpp
poc/poc1-toon-rendering/: CMakeLists.txt  main.cpp
poc/poc2-enet-snapshot-sync/: CMakeLists.txt  main.cpp
poc/poc3-dense-grid/: CMakeLists.txt  main.cpp  terrain_grid.h
poc/poc4-ecs-simulation/: CMakeLists.txt  main.cpp
poc/poc6-ui-overlay/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ui_integration.cpp  test_ui_widgets.cpp
tests/app/: test_game_loop_integration.cpp  test_simulation_clock.cpp
tests/assets/: test_model_loader.cpp
tests/building/: test_abandon_grace_period.cpp  test_building_component.cpp  test_building_downgrade.cpp  test_building_events.cpp  test_building_factory.cpp  test_building_grid.cpp  test_building_network_messages.cpp  test_building_queryable.cpp  test_building_serialization.cpp  test_building_spawn_checker.cpp  test_building_spawning_loop.cpp  test_building_state_transitions.cpp  test_building_system.cpp  test_building_template.cpp  test_building_template_query.cpp  test_building_types.cpp  test_building_upgrade.cpp  test_construction_component.cpp  test_construction_progress.cpp  test_debris_clear_system.cpp  test_debris_component.cpp  test_demolition_handler.cpp  test_forward_interfaces.cpp  test_forward_stubs.cpp  test_initial_templates.cpp  test_template_selector.cpp  test_zone_building_pipeline.cpp
tests/contamination/: test_contamination_aggregator.cpp  test_contamination_comprehensive.cpp  test_contamination_decay.cpp  test_contamination_events.cpp  test_contamination_grid.cpp  test_contamination_overlay.cpp  test_contamination_spread.cpp  test_contamination_stats.cpp  test_contamination_system.cpp  test_contamination_types.cpp  test_energy_contamination.cpp  test_industrial_contamination.cpp  test_terrain_contamination.cpp  test_traffic_contamination.cpp
tests/core/: test_interpolatable.cpp  test_types.cpp
tests/demand/: test_demand_cap.cpp  test_demand_comprehensive.cpp  test_demand_data.cpp  test_demand_factors_ui.cpp  test_demand_integration.cpp  test_demand_stats.cpp  test_demand_system.cpp  test_exchange_demand.cpp  test_fabrication_demand.cpp  test_habitation_demand.cpp
tests/disorder/: test_disorder_component.cpp  test_disorder_comprehensive.cpp  test_disorder_events.cpp  test_disorder_generation.cpp  test_disorder_grid.cpp  test_disorder_overlay.cpp  test_disorder_spread.cpp  test_disorder_stats.cpp  test_disorder_system.cpp  test_enforcer_suppression.cpp  test_land_value_disorder.cpp
tests/economy/: test_bond_issuance.cpp  test_bond_repayment.cpp  test_budget_cycle.cpp  test_construction_cost.cpp  test_credit_advance.cpp  test_deficit_handling.cpp  test_economy_components.cpp  test_economy_integration.cpp  test_economy_net_sync.cpp  test_economy_queryable.cpp  test_economy_stubs.cpp  test_economy_system.cpp  test_emergency_bond.cpp  test_expense_tracking.cpp  test_funding_level.cpp  test_infrastructure_maintenance.cpp  test_ordinance.cpp  test_revenue_tracking.cpp  test_service_funding_integration.cpp  test_service_maintenance.cpp  test_treasury_state.cpp  test_tribute_calculation.cpp  test_tribute_comprehensive.cpp  test_tribute_demand_modifier.cpp  test_tribute_rate_config.cpp
tests/ecs/: test_component_serialization.cpp  test_position_sync_system.cpp  test_registry.cpp  test_render_component.cpp  test_transform_component.cpp  test_transform_interpolation.cpp
tests/energy/: test_building_decon_handler.cpp  test_building_event_handler.cpp  test_building_integration.cpp  test_conduit_active_state.cpp  test_conduit_connection.cpp  test_conduit_placement.cpp  test_conduit_preview.cpp  test_conduit_removal.cpp  test_consumer_aggregation.cpp  test_contamination_source.cpp  test_coverage_bfs.cpp  test_coverage_dirty.cpp  test_coverage_grid.cpp  test_coverage_queries.cpp  test_energy_component.cpp  test_energy_conduit_component.cpp  test_energy_contamination_adapter.cpp  test_energy_distribution.cpp  test_energy_enums.cpp  test_energy_events.cpp  test_energy_integration.cpp  test_energy_performance.cpp  test_energy_producer_component.cpp  test_energy_provider.cpp  test_energy_requirements.cpp  test_energy_serialization.cpp  test_energy_system.cpp  test_multiplayer_sync.cpp  test_nexus_aging.cpp  test_nexus_output.cpp  test_nexus_placement.cpp  test_nexus_type_config.cpp  test_per_player_energy_pool.cpp  test_pool_calculation.cpp  test_pool_state_machine.cpp  test_pool_transition_events.cpp  test_rationing.cpp  test_state_change_events.cpp  test_terrain_bonus.cpp  test_threshold_balance.cpp
tests/fluid/: test_building_decon_handler.cpp  test_building_event_handler.cpp  test_conduit_active_state.cpp  test_conduit_connection.cpp  test_conduit_placement.cpp  test_conduit_preview.cpp  test_conduit_removal.cpp  test_consumer_aggregation.cpp  test_coverage_dirty.cpp  test_coverage_queries.cpp  test_extractor_registration.cpp  test_fluid_component.cpp  test_fluid_conduit_component.cpp  test_fluid_coverage_bfs.cpp  test_fluid_coverage_grid.cpp  test_fluid_distribution.cpp  test_fluid_enums.cpp  test_fluid_events.cpp  test_fluid_extractor_config.cpp  test_fluid_integration.cpp  test_fluid_placement_validation.cpp  test_fluid_producer_component.cpp  test_fluid_provider.cpp  test_fluid_requirements.cpp  test_fluid_reservoir_component.cpp  test_fluid_reservoir_config.cpp  test_fluid_serialization.cpp  test_fluid_system.cpp  test_multiplayer_sync.cpp  test_per_player_fluid_pool.cpp  test_pool_calculation.cpp  test_pool_state_machine.cpp  test_pool_transition_events.cpp  test_state_change_events.cpp  test_water_proximity.cpp
tests/input/: test_camera_animator.cpp  test_camera_mode_manager.cpp  test_orbit_controller.cpp  test_pan_controller.cpp  test_pending_action_tracker.cpp  test_preset_snap_controller.cpp  test_zoom_controller.cpp
tests/integration/: test_multi_client_scenarios.cpp  (+2 more)
(+1278 files in other folders)
